# kube-copilot-python

./: .editorconfig  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  format.yaml  release.yaml
hack/: release.sh
helm/kube-copilot/: Chart.yaml  values.yaml
kube_copilot/: agent.py  cli.py  kubeconfig.py  labeler.py  output.py  prompts.py  python.py  shell.py  st_callable_util.py  utils.py
web/: Home.py
web/pages/: Analyze.py  Audit.py  Diagnose.py  Generate.py
