[tool.poetry]
name = "kube-copilot"
version = "0.2.0"
description = "Kubernetes Copilot"
authors = ["Pengfei Ni <feiskyer@gmail.com>"]
readme = "README.md"
packages = [{include = "kube_copilot"}]
homepage = "https://github.com/feiskyer/kube-copilot"
repository = "https://github.com/feiskyer/kube-copilot"
keywords = ["kubernetes", "copilot", "openai", "chatgpt", "ai", "agentic"]

[tool.poetry.scripts]
kube-copilot = 'kube_copilot.cli:main'

[tool.poetry.dependencies]
python = ">=3.11,<4"
requests = "^2.32.3"
openai = "^1.54.4"
tiktoken = "^0.8"
lark = "^1.2.2"
faiss-cpu = "^1.9.0"
google-api-python-client = ">=2.152.0"
click = "^8.1.7"
kubernetes = ">=31.0.0"
streamlit = "^1.40.1"
langgraph = "^0.2"
langchain-openai = "^0.2"
langchain-experimental = "^0.3"
langchain-community = "^0.3"
langchain-google-community = "^2.0.2"
langchain = "^0.3"

[tool.poetry.group.dev.dependencies]
httpx = {extras = ["socks"], version = "^0.26.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
