[tool.poetry]
name = "kube-copilot"
version = "0.2.1"
description = "Kubernetes Copilot"
authors = ["Pengfei Ni <feiskyer@gmail.com>"]
readme = "README.md"
packages = [{include = "kube_copilot"}]
homepage = "https://github.com/feiskyer/kube-copilot"
repository = "https://github.com/feiskyer/kube-copilot"
keywords = ["kubernetes", "copilot", "openai", "chatgpt", "ai", "agentic"]

[tool.poetry.scripts]
kube-copilot = 'kube_copilot.cli:main'

[tool.poetry.dependencies]
python = ">=3.12,<4"
requests = "^2.32.4"
openai = "^1.95.1"
tiktoken = "^0.9.0"
lark = "^1.2.2"
faiss-cpu = "^1.11.0"
google-api-python-client = ">=2.176.0"
click = "^8.2.1"
kubernetes = ">=33.1.0"
streamlit = "^1.46.1"
langgraph = "^0.5.2"
langchain-openai = "^0.3.27"
langchain-google-community = "^2.0.7"
langchain-experimental = "^0.3.4"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
httpx = {extras = ["socks"], version = "0.28.1"}
black = "^25.1.0"
ufmt = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
